samples/_failures_safe/1761098097_87a6c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bfade961.c: In function ‘main’:
./samples/SAFE/__tmp_bfade961.c:170:17: error: expected ‘;’ at end of input
  170 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_bfade961.c:170:9: error: expected declaration or statement at end of input
  170 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_bfade961.c:170:9: error: expected declaration or statement at end of input
